--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .idea/
 .DS_Store
-.siyuan
 workspace/SiYuan/backup/
 workspace/SiYuan/conf/
 workspace/SiYuan/history/
 workspace/SiYuan/sync/
 workspace/SiYuan/temp/
+workspace/SiYuan/data/.siyuan/
