--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.9",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -19,7 +20,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "unplugin-auto-import": "^0.9.4",
+    "unplugin-vue-components": "^0.21.1"
   },
   "eslintConfig": {
     "root": true,
