--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
@@ -11,8 +11,19 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "assert": "^2.0.0",
+    "browserify-fs": "^1.0.0",
+    "buffer": "^6.0.3",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
     "element-plus": "^2.2.9",
+    "https-browserify": "^1.0.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
+    "util": "^0.12.4",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.0"
   },
