--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
@@ -14,10 +14,13 @@
     "assert": "^2.0.0",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
     "core-js": "^3.8.3",
     "crypto-browserify": "^3.12.0",
     "element-plus": "^2.2.9",
     "https-browserify": "^1.0.0",
+    "metaweblog-api": "^1.2.0",
+    "node-localstorage": "^2.2.1",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
@@ -28,8 +31,11 @@
     "vue-i18n": "^9.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.9",
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/node": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
     "@intlify/vue-i18n-loader": "^3.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
