--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
@@ -28,7 +28,9 @@
     "url": "^0.11.0",
     "util": "^0.12.4",
     "vue": "^3.2.13",
-    "vue-i18n": "^9.1.0"
+    "vue-i18n": "^9.1.0",
+    "wordpress": "^1.4.1",
+    "xmlrpc": "^1.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.9",
