--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
@@ -25,6 +25,7 @@
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "transliteration": "^2.3.5",
     "url": "^0.11.0",
     "util": "^0.12.4",
     "vue": "^3.2.13",
