--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
@@ -19,6 +19,7 @@
     "crypto-browserify": "^3.12.0",
     "element-plus": "^2.2.9",
     "https-browserify": "^1.0.0",
+    "js-yaml": "^4.1.0",
     "metaweblog-api": "^1.2.0",
     "node-localstorage": "^2.2.1",
     "path-browserify": "^1.0.1",
