:art: 备份本地笔记

--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
@@ -24,6 +24,7 @@
     "node-localstorage": "^2.2.1",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
+    "showdown": "^2.1.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "transliteration": "^2.3.5",
