--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "assert": "^2.0.0",
     "browserify-fs": "^1.0.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "constants-browserify": "^1.0.0",
     "core-js": "^3.8.3",
@@ -22,6 +23,7 @@
     "js-yaml": "^4.1.0",
     "metaweblog-api": "^1.2.0",
     "node-localstorage": "^2.2.1",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "showdown": "^2.1.0",
@@ -47,6 +49,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "ts-node": "^10.9.1",
     "unplugin-auto-import": "^0.10.0",
     "unplugin-vue-components": "^0.21.1",
     "vue-cli-plugin-i18n": "~2.3.1"
