--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/package.json
@@ -16,6 +16,7 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "constants-browserify": "^1.0.0",
+    "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.8.3",
     "crypto-browserify": "^3.12.0",
     "element-plus": "^2.2.9",
