--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
   note:
     stdin_open: true
     tty: true
-    image: b3log/siyuan:latest
+    image: b3log/siyuan:v2.8.8
     ports:
       - "6808:6806"
     environment:
