--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,14 @@ services:
     networks:
       - note_blog_network
 
-  blog:
-    image: terwer/nuxt3-blog:1.2.0
-    ports:
-      - "3333:3000"
-    env_file:
-      - ./.env.docker
-    networks:
-      - note_blog_network
+#  blog:
+#    image: terwer/nuxt3-blog:1.2.0
+#    ports:
+#      - "3333:3000"
+#    env_file:
+#      - ./.env.docker
+#    networks:
+#      - note_blog_network
 
 networks:
   note_blog_network:
