--- a/docker-compose-private.yml
+++ b/docker-compose-private.yml
@@ -14,17 +14,17 @@ services:
     volumes:
       - ./workspace:/home/siyuan/Documents
     restart: "no"
-    networks:
-      - note_blog_network
-
-  private-blog:
-    image: terwer/nuxt3-blog:latest
-    ports:
-      - "3333:3000"
-    env_file:
-      - ./.env.docker
-    networks:
-      - note_blog_network
-
-networks:
-  note_blog_network:
+#    networks:
+#      - private_note_blog_network
+#
+#  private-blog:
+#    image: terwer/nuxt3-blog:latest
+#    ports:
+#      - "3333:3000"
+#    env_file:
+#      - ./.env.docker
+#    networks:
+#      - private_note_blog_network
+#
+#networks:
+#  private_note_blog_network:
