--- a/docker-compose-private.yml
+++ b/docker-compose-private.yml
@@ -6,13 +6,13 @@ services:
   private-note:
     stdin_open: true
     tty: true
-    image: b3log/siyuan:v2.9.2
+    image: b3log/siyuan:v2.9.3
     ports:
       - "6807:6806"
     environment:
       - "TZ=CST-8"
     volumes:
-      - ./workspace:/home/siyuan/Documents
+      - ./workspace:/home/siyuan
     restart: "no"
 #    networks:
 #      - private_note_blog_network
