chore: update siyuan-note to 3.1.11

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -3,15 +3,15 @@
 
 version: '3'
 services:
-  test-note:
-    stdin_open: true
-    tty: true
-    image: b3log/siyuan:v2.9.6
-    command: [ "--workspace=/home/siyuan/Documents", "--accessAuthCode=123456" ]
+  test:
+    container_name: my-note
+    image: registry.cn-shenzhen.aliyuncs.com/terwer/dm:siyuan-3.1.11
+    # image: b3log/siyuan:v3.1.11
     ports:
       - "6806:6806"
     environment:
       - "TZ=CST-8"
+    command: --accessAuthCode=123456
     volumes:
       - ./workspace:/home/siyuan/Documents
     restart: "no"
