--- a/docker-compose-zhangy.yml
+++ b/docker-compose-zhangy.yml
@@ -3,14 +3,15 @@
 
 version: '3'
 services:
-  zhangy-note:
-    stdin_open: true
-    tty: true
-    image: b3log/siyuan:v2.9.6
+  zhangy:
+    container_name: my-note
+    image: registry.cn-shenzhen.aliyuncs.com/terwer/dm:siyuan-3.1.11
+    # image: b3log/siyuan:v3.1.11
     ports:
       - "6809:6806"
     environment:
       - "TZ=CST-8"
+    command: --accessAuthCode=123456
     volumes:
       - ./workspace:/home/siyuan/Documents
     restart: "no"
