--- a/docker-compose-rds.yml
+++ b/docker-compose-rds.yml
@@ -4,9 +4,8 @@
 version: '3'
 services:
   public:
+    build: .
     container_name: my-note
-    image: registry.cn-shenzhen.aliyuncs.com/terwer/dm:siyuan-3.1.11
-    # image: b3log/siyuan:v3.1.11
     ports:
       - "6808:6806"
     environment:
